<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewArt"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="TODO"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toTopOf="@+id/editTextArtName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextArtYear" />

    <EditText
        android:id="@+id/editTextArtName"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:padding="10dp"
        android:hint="@string/enter_art_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextArtistName"
        app:layout_constraintStart_toStartOf="@+id/imageViewArt"
        app:layout_constraintEnd_toEndOf="@+id/imageViewArt"
        app:layout_constraintTop_toBottomOf="@+id/imageViewArt" />

    <EditText
        android:id="@+id/editTextArtistName"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:padding="10dp"
        android:hint="@string/enter_artist_name"
        android:inputType="textPersonName"
        android:background="@drawable/custom_input"
        app:layout_constraintBottom_toTopOf="@+id/editTextArtYear"
        app:layout_constraintStart_toStartOf="@+id/editTextArtName"
        app:layout_constraintEnd_toEndOf="@+id/editTextArtName"
        app:layout_constraintTop_toBottomOf="@+id/editTextArtName" />

    <EditText
        android:id="@+id/editTextArtYear"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="37dp"
        android:ems="10"
        android:padding="10dp"
        android:hint="@string/enter_art_year"
        android:inputType="textPersonName"
        android:background="@drawable/custom_input"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
        app:layout_constraintStart_toStartOf="@+id/editTextArtistName"
        app:layout_constraintEnd_toEndOf="@id/editTextArtistName"
        app:layout_constraintTop_toBottomOf="@+id/editTextArtistName" />

</androidx.constraintlayout.widget.ConstraintLayout>